<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buyer_profile"

            android:icon="@drawable/ic_person_details"
            android:title="@string/menu_buyer_profile" />
        <item
            android:id="@+id/nav_buyer_organisation"
            android:icon="@drawable/ic_business_id"
            android:title="@string/menu_buyer_organisation" />
        <item
            android:id="@+id/nav_open_tenders"

            android:icon="@drawable/open_tenders"
            android:title="@string/menu_open_tenders" />
        <item
            android:id="@+id/nav_buyer_tenders"

            android:icon="@drawable/tender"
            android:title="@string/menu_buyer_tenders" />
        <item
            android:id="@+id/nav_buyer_drafts"

            android:icon="@drawable/draft"
            android:title="@string/menu_tenders_drafts" />
        <item
            android:id="@+id/nav_tenders_history"

            android:icon="@drawable/history_tenders"
            android:title="@string/menu_tenders_history" />
    </group>
</menu>