<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.letsema.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.letsema.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.letsema.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/draftsTenderFragment"
        android:name="com.example.letsema.ui.drafts.DraftsTenderFragment"
        android:label="DraftsTenderFragment" />
    <fragment
        android:id="@+id/historyTenderFragment"
        android:name="com.example.letsema.ui.history.HistoryTenderFragment"
        android:label="HistoryTenderFragment" />
    <fragment
        android:id="@+id/myTendersFragment"
        android:name="com.example.letsema.ui.mytenders.MyTendersFragment"
        android:label="MyTendersFragment" />
    <fragment
        android:id="@+id/openTenderFragment"
        android:name="com.example.letsema.ui.opentenders.OpenTenderFragment"
        android:label="OpenTenderFragment" />
    <fragment
        android:id="@+id/organisationFragment"
        android:name="com.example.letsema.ui.organisation.OrganisationFragment"
        android:label="OrganisationFragment" />
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.letsema.ui.profile.UserProfileFragment"
        android:label="UserProfileFragment" />
</navigation>